# altostratus_cloud_run_etl_aemet

./: .dockerignore  .gitignore  Dockerfile  README.md  TAREAS  config.yaml  data-altostratus-challenge-1689e3bfff2f.json  deploy_utils.bash  main.py  pyproject.toml  workflow
cloud_run_elt/: config.py  connector.py  sink.py  source.py
tests/: source_sink_test.py
